VCSample/include/PortSIPLib/PortSIPLib.hxx


	void PortSIP_clearAudioCodec(void * libSDK);

	void PortSIP_clearVideoCodec(void * libSDK);

	int PortSIP_setAudioCodecParameter(void * libSDK, AUDIOCODEC_TYPE codecType, const char * parameter);

	int PortSIP_setVideoCodecParameter(void * libSDK, VIDEOCODEC_TYPE codecType, const char * parameter);


	int PortSIP_setSrtpPolicy(void * libSDK, SRTP_POLICY policy, bool allowSrtpOverUnsecureTransport);

	int PortSIP_setRtpPortRange(void * libSDK, int minimumRtpAudioPort, int maximumRtpAudioPort, int minimumRtpVideoPort, int maximumRtpVideoPort);

	int PortSIP_setRtcpPortRange(void * libSDK, int minimumRtcpAudioPort, int maximumRtcpAudioPort, int minimumRtcpVideoPort, int maximumRtcpVideoPort);


	int PortSIP_enableCallForward(void * libSDK, bool forBusyOnly, const char * forwardTo);

	int PortSIP_disableCallForward(void * libSDK);

	int PortSIP_enableSessionTimer(void * libSDK, int timerSeconds, SESSION_REFRESH_MODE refreshMode);

	int PortSIP_disableSessionTimer(void * libSDK);

	void PortSIP_setDoNotDisturb(void * libSDK, bool state);

	int PortSIP_enableAutoCheckMwi(void * libSDK, bool state);

	int PortSIP_setRtpKeepAlive(void * libSDK, bool state, int keepAlivePayloadType, int deltaTransmitTimeMS);

	int PortSIP_setKeepAliveTime(void * libSDK, int keepAliveTime);


	int PortSIP_getSipMessageHeaderValue(void * libSDK, const char * sipMessage, const char * headerName, char * headerValue, int headerValueLength);


	// msgType - 1: request; msgType - 2: response; msgType - 3: both
	int PortSIP_addSipMessageHeader(void * libSDK, long sessionId, const char * methodName, int msgType, const char * headerName, const char * headerValue);

	int PortSIP_removeAddedSipMessageHeader(void * libSDK, long sipMessageHeaderId);

	int PortSIP_modifySipMessageHeader(void * libSDK, long sessionId, const char * methodName, int msgType, const char * headerName, const char * headerValue);

	int PortSIP_removeModifiedSipMessageHeader(void * libSDK, long sipMessageHeaderId);

	void PortSIP_clearAddedSipMessageHeaders(void * libSDK);

	void PortSIP_clearModifiedSipMessageHeaders(void * libSDK);


	int PortSIP_addSupportedMimeType(void * libSDK, const char * methodName, const char * mimeType, const char * subMimeType);


	int PortSIP_setAudioSamples(void * libSDK, int ptime, int maxPtime);

	int PortSIP_setAudioDeviceId(void * libSDK, int inputDeviceId, int outputDeviceId);

	int PortSIP_setVideoDeviceId(void * libSDK, int deviceId);

	int PortSIP_setVideoResolution(void * libSDK, int width, int height);

	int PortSIP_setAudioBitrate(void * libSDK, long sessionId, AUDIOCODEC_TYPE codecType, int bitrateKbps);

	int PortSIP_setVideoBitrate(void * libSDK, long sessionId, int bitrateKbps);

	int PortSIP_setVideoFrameRate(void * libSDK, long sessionId, int frameRate);

	int PortSIP_sendVideo(void * libSDK, long sessionId, bool sendState);


	void PortSIP_muteMicrophone(void * libSDK, bool mute);

	void PortSIP_muteSpeaker(void * libSDK, bool mute);

	void PortSIP_setChannelOutputVolumeScaling(void * libSDK, long sessionId, int scaling);

	void PortSIP_setChannelInputVolumeScaling(void * libSDK, long sessionId, int scaling);

	void PortSIP_setLocalVideoWindow(void * libSDK, void * localVideoWindow);

	int PortSIP_setRemoteVideoWindow(void * libSDK, long sessionId, void * remoteVideoWindow);

	int PortSIP_displayLocalVideo(void * libSDK, bool state, bool mirror);

	int PortSIP_setVideoNackStatus(void * libSDK, bool state);


	long PortSIP_call(void * libSDK, const char * callee, bool sendSdp, bool videoCall);

	int PortSIP_rejectCall(void * libSDK, long sessionId, int code);

	int PortSIP_hangUp(void * libSDK, long sessionId);

	int PortSIP_answerCall(void * libSDK, long sessionId, bool videoCall);

	int PortSIP_updateCall(void * libSDK, long sessionId, bool enableAudio, bool enableVideo);

	int PortSIP_hold(void * libSDK, long sessionId);

	int PortSIP_unHold(void * libSDK, long sessionId);

	int PortSIP_refer(void * libSDK, long sessionId, const char *  referTo);

	int PortSIP_attendedRefer(void * libSDK, long sessionId, long replaceSessionId, const char *  referTo);